<resources>
    <string name="app_name">MypeKotlin</string>
    <string name="bottom_nav_map_title">map</string>
    <string name="bottom_nav_profile_title">me</string>
    <string name="bottom_nav_settings_title">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_permission_text">something is missing</string>
    <string name="request_permission">request permission</string>
    <string name="full_name_text_view">Full name</string>
    <string name="personal_information_text_view">personal information</string>
    <string name="google_play_button">google play</string>
    <string name="change_language_text_view">Change language</string>
    <string name="empty_full_name">enter your name and surname</string>
    <string name="empty_person_info">tell something about yourself</string>
    <string name="input_dialog_name">name</string>
    <string name="input_name_hint">input name</string>
    <string name="input_surname_hint">input surname</string>
    <string name="input_dialog_surname">surname</string>
    <string name="save_button">save</string>
    <string name="input_info_hint">Something about yourself</string>
    <string name="input_dialog_info">Person information</string>
    <string name="edit_text_empty_error_message">%1$s must not be empty</string>
    <string name="edit_text_space_error_message">%1$s must not constrain spaces</string>
    <string name="send_email_button">send email</string>
    <string name="email_subject">feedback</string>
    <string name="GPS_is_off">GPS is off</string>
    <string name="sign_up_button">sign up</string>
    <string name="sign_in_button">sign in</string>
    <string name="login_hint">login</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="non_existent_account_error">Account is not created</string>
    <string name="login_or_register">Login or register</string>
    <string name="sign_out">sign out</string>
    <string name="help_password_text">min 8 symbols</string>
    <string name="login_is_taken">login is taken</string>

</resources>