<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_dialog_name"/>
    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name_hint"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_dialog_surname"/>
    <EditText
        android:id="@+id/input_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_surname_hint"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_dialog_info"/>
    <EditText
        android:id="@+id/input_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_info_hint"/>

    <Button
        android:layout_marginTop="32dp"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"/>

</LinearLayout>