<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".fragment.MapFragment"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/language_change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/change_language_text_view" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="123" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/google_play_button"
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_play_button"/>
    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_email_button"/>
    <Button
        android:backgroundTint="#00BCD4"
        android:layout_marginTop="16dp"
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"/>
</LinearLayout>